# aws-security-posture-scanner

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: aws_session.py  config.py  main.py  models.py  reporting.py  runner.py  s3_writer.py
app/checks/: cloudtrail.py  iam.py  s3.py
terraform/dev-fixtures/s3/: main.tf  outputs.tf  variables.tf
terraform/envs/dev/: ecr.tf  ecs.tf  eventbridge.tf  iam.tf  logs.tf  network.tf  outputs.tf  s3.tf  variables.tf
tests/: test_cloudtrail_checks.py  test_iam_checks.py  test_models.py  test_reporting.py  test_s3_checks.py
