[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-security-posture-scanner"
version = "0.1.0"
description = "AWS Security Posture Scanner MVP"
requires-python = ">=3.12"

dependencies = [
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
posture-scanner = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"